Réglage bug d'affichage et paramètre lang <html> Réglage d'un bug d'affichage de la page room sur les plus grandes résolutions d'écran. Ajout de 5px de padding sur les tags en version mobile. Réglage du paramètre lang de la balise html sur "fr".

--- a/src/styles/layout/_tags.scss
+++ b/src/styles/layout/_tags.scss
@@ -19,7 +19,7 @@
         text-align: center;
 
         @include mobile-only {
-            padding: 5px 0;
+            padding: 5px;
             font-size: 10px;
             border-radius: 5px;
             white-space: nowrap;
