--- a/src/styles/pages/_room.scss
+++ b/src/styles/pages/_room.scss
@@ -26,10 +26,12 @@
         flex-flow: column nowrap;
         justify-content: space-between;
         align-items: flex-start;
+        width: 50%;
 
         @include mobile-tablet {
             margin: 0;
             margin-top: 5px;
+            width: 100%;
         }
 
         &__title {
